<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/cover"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="5dp"

        >
        <TextView
            android:id="@+id/format"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/format"
            android:textSize="40dp"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:background="#E6FADE53"
            android:textStyle="bold"
            android:textColorHighlight="#FC8B35"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Format number"
            android:background="#3703FF05"
            android:textAlignment="center"/>
        <LinearLayout
            android:id="@+id/layoutCheckbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="60dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp">

            <CheckBox
                android:id="@+id/backGround"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/background"
                android:checked="false"/>
            <CheckBox
                android:id="@+id/textColor"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:text="@string/textColor"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:checked="false"/>
            <CheckBox
                android:id="@+id/center"
                android:layout_gravity="right"
                android:layout_height="wrap_content"
                android:text="@string/center"
                android:layout_width="wrap_content"
                android:checked="false"/>
        </LinearLayout>
        <EditText
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_input"
            android:textSize="40dp"
            android:background="#28F7DA47"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Format number"
            android:background="#3703FF05"
            android:textAlignment="center"
            />
        <LinearLayout
            android:id="@+id/layoutRadiobtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="100dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            >

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <RadioButton
                    android:id="@+id/odd"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/rbt_odd"
                    />
                <RadioButton
                    android:id="@+id/even"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rbt_even"
                    android:checked="false"
                    />
                <RadioButton
                    android:id="@+id/both"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rbt_both"
                    />
            </RadioGroup>


        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="150dp"
            android:paddingTop="20dp"
            android:paddingBottom="10dp"

            >
            <Button
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:gravity="center"
                android:background="#370280"
                android:textColor="#FFF6C9"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"

                />

        </LinearLayout>

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="60dp"

            />


    </LinearLayout>

</android.support.constraint.ConstraintLayout>